--- a/server/package.json
+++ b/server/package.json
@@ -11,14 +11,18 @@
   "author": "linhaishe",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multiparty": "^4.2.3",
+    "spark-md5": "^3.0.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.4",
+    "@types/multiparty": "^0.0.33",
     "nodemon": "^2.0.6",
     "ts-node": "^10.7.0",
     "typescript": "^4.2.4"
