--- a/server/package.json
+++ b/server/package.json
@@ -14,13 +14,15 @@
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "morgan": "^1.10.0",
+    "fs-extra": "^11.1.1",
     "multiparty": "^4.2.3",
+    "path": "^0.12.7",
     "spark-md5": "^3.0.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/fs-extra": "^11.0.1",
     "@types/morgan": "^1.9.4",
     "@types/multiparty": "^0.0.33",
     "nodemon": "^2.0.6",
